IntelliJ warnings